Improve producer logic